--- a/app/report-problem/report-problem.component.html
+++ b/app/report-problem/report-problem.component.html
@@ -1,13 +1,26 @@
+
+
+<!--
 <div  class="" layout="row" layout-align="center" id="reportAProblemBar">        
     <span class="margin-right-small">See something that doesn't look right?</span>        
-    <a ng-href="https://library.watzekdi.net/reportproblem-ve?adaptor=Local+Search+Engine&amp;context=L&amp;docid=alma99900039298801844&amp;lang=en&amp;offset=0&amp;query=any,contains,cats&amp;search_scope=EVERYTHING&amp;tab=Everything&amp;vid=01ALLIANCE_LCC:LCC" target="_blank" class="md-primoExplore-theme" href="https://library.watzekdi.net/reportproblem-ve?adaptor=Local+Search+Engine&amp;context=L&amp;docid=alma99900039298801844&amp;lang=en&amp;offset=0&amp;query=any,contains,cats&amp;search_scope=EVERYTHING&amp;tab=Everything&amp;vid=01ALLIANCE_LCC:LCC">            
-        <button class="button-with-icon zero-margin md-button md-button-raised md-primoExplore-theme md-ink-ripple" type="button" aria-label="Report a Problem" style="color: #5c92bd;">                
+    <a   style="color: #5c92bd;" target="_blank" class="md-primoExplore-theme" href="https://library.watzekdi.net/reportproblem-ve?adaptor=Local+Search+Engine&amp;context=L&amp;docid={{ docid }}&amp;lang=en&amp;offset=0&amp;query=any,contains,cats&amp;search_scope=EVERYTHING&amp;tab=Everything&amp;vid=01ALLIANCE_LCC:LCC">            
+                      
            
 <span class="material-symbols-outlined">
-    <img src="../../assets/icons/open_in_new.svg">
+    
 </span>
-<span style="text-transform: none;">Report a Problem</span>                
-         
-</button>        
+<span style="text-transform: none;"><img src="../../assets/icons/open_in_new.svg"> Report a Problem</span>                
+       
 </a>    
+</div>-->
+
+<div _ngcontent-ng-c1897170466="" id="reportAProblemBar">
+    <span _ngcontent-ng-c1897170466="" class="margin-right-small">See something that doesn't look right?</span>
+    <a _ngcontent-ng-c1897170466="" target="_blank" class="md-primoExplore-theme"
+       href="https://library.watzekdi.net/reportproblem-ve?adaptor=Local+Search+Engine&amp;context=L&amp;docid={{ docid }}&amp;lang=en&amp;offset=0&amp;query=any,contains,cats&amp;search_scope=EVERYTHING&amp;tab=Everything&amp;vid=01ALLIANCE_LCC:LCC">
+        <span _ngcontent-ng-c1897170466="" class="material-symbols-outlined"></span>
+        <span _ngcontent-ng-c1897170466="" style="text-transform: none;">
+            <img _ngcontent-ng-c1897170466="" src="../../assets/icons/open_in_new.svg"> Report a Problem
+        </span>
+    </a>
 </div>
