report a problem working

--- a/app/report-problem/report-problem.component.html
+++ b/app/report-problem/report-problem.component.html
@@ -17,7 +17,7 @@
 <div _ngcontent-ng-c1897170466="" id="reportAProblemBar">
     <span _ngcontent-ng-c1897170466="" class="margin-right-small">See something that doesn't look right?</span>
     <a _ngcontent-ng-c1897170466="" target="_blank" class="md-primoExplore-theme"
-       href="https://library.watzekdi.net/reportproblem-ve?adaptor=Local+Search+Engine&amp;context=L&amp;docid={{ docid }}&amp;lang=en&amp;offset=0&amp;query=any,contains,cats&amp;search_scope=EVERYTHING&amp;tab=Everything&amp;vid=01ALLIANCE_LCC:LCC">
+       href="https://library.watzekdi.net/reportproblem-nde?adaptor=Local+Search+Engine&amp;context={{ context}}&amp;docid={{ docid }}&amp;lang=en&amp;offset=0&amp;query=any,contains,cats&amp;search_scope=EVERYTHING&amp;tab=Everything&amp;vid={{vid}}">
         <span _ngcontent-ng-c1897170466="" class="material-symbols-outlined"></span>
         <span _ngcontent-ng-c1897170466="" style="text-transform: none;">
             <img _ngcontent-ng-c1897170466="" src="../../assets/icons/open_in_new.svg"> Report a Problem
