--- a/app/report-problem/report-problem.component.html
+++ b/app/report-problem/report-problem.component.html
@@ -16,11 +16,38 @@
 
 <div _ngcontent-ng-c1897170466="" id="reportAProblemBar">
     <span _ngcontent-ng-c1897170466="" class="margin-right-small">See something that doesn't look right?</span>
-    <a _ngcontent-ng-c1897170466="" target="_blank" class="md-primoExplore-theme"
+  
+       <!-- path computed here: https://nikitahl.github.io/svg-2-code/-->
+        
+            
+            <svg
+   height="24"
+   viewBox="0 -960 960 960"
+   width="24"
+   fill="#5c92bd"
+   version="1.1"
+   id="svg1"
+   sodipodi:docname="open_in_new.svg"
+   xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
+   xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+   xmlns="http://www.w3.org/2000/svg"
+   xmlns:svg="http://www.w3.org/2000/svg">
+  <defs
+     id="defs1" />
+     
+ 
+  <path
+     d="m 200,-120 q -33,0 -56.5,-23.5 Q 120,-167 120,-200 v -560 q 0,-33 23.5,-56.5 Q 167,-840 200,-840 h 280 v 80 H 200 v 560 h 560 v -280 h 80 v 280 q 0,33 -23.5,56.5 Q 793,-120 760,-120 Z m 188,-212 -56,-56 372,-372 H 560 v -80 h 280 v 280 h -80 v -144 z"
+     id="path1" />
+</svg>
+
+            
+           
+            
+        
+            <a _ngcontent-ng-c1897170466="" target="_blank" class="md-primoExplore-theme"
        href="https://library.watzekdi.net/reportproblem-nde?adaptor=Local+Search+Engine&amp;context={{ context}}&amp;docid={{ docid }}&amp;lang=en&amp;offset=0&amp;query=any,contains,cats&amp;search_scope=EVERYTHING&amp;tab=Everything&amp;vid={{vid}}">
-        <span _ngcontent-ng-c1897170466="" class="material-symbols-outlined"></span>
-        <span _ngcontent-ng-c1897170466="" style="text-transform: none;">
-            <img _ngcontent-ng-c1897170466="" src="../../assets/icons/open_in_new.svg"> Report a Problem
-        </span>
+      
+        <span _ngcontent-ng-c1897170466=""> Report a Problem </span>
     </a>
 </div>
