more style fix in RAP, and added login image

--- a/app/report-problem/report-problem.component.html
+++ b/app/report-problem/report-problem.component.html
@@ -13,6 +13,7 @@
        
 </a>    
 </div>-->
+<div id="rapParent">
 
 <div _ngcontent-ng-c1897170466="" id="reportAProblemBar">
     <span _ngcontent-ng-c1897170466="" class="margin-right-small">See something that doesn't look right?</span>
@@ -50,4 +51,5 @@
       
         <span _ngcontent-ng-c1897170466=""> Report a Problem </span>
     </a>
+</div>
 </div>
