dynamic hours for b & w

--- a/app/library-cards/library-cards.component.html
+++ b/app/library-cards/library-cards.component.html
@@ -8,12 +8,9 @@
 
     <div class="md3-card-content">
       <h3 class="md3-card-title">Aubrey R. Watzek Library</h3>
-      <h4 class="md3-card-subtitle">Today's Hours: <span id="watzek-hours"></span></h4>
-      <p class="md3-card-text">
-       <br />
-        
-        
-      </p>
+      <h4 class="md3-card-subtitle">Today's Hours: {{watzekHoursText}}</h4>
+       <p class="md3-card-text">Contact email: <a href='mailto:librarian@lclark.edu'>librarian&#64;lclark.edu</a></p>
+       <p class="md3-card-text">Contact phone: 503-768-7285</p>
     </div>
   </div>
 
@@ -27,11 +24,9 @@
     <div class="md3-card-content">
       <h3 class="md3-card-title">Paul L. Boley Law Library</h3>
       
-      <h4 class="md3-card-subtitle">Today's Hours: </h4>
-      <p class="md3-card-text">
-        Open 8:00am – 6:00pm<br />
-        
-      </p>
+      <h4 class="md3-card-subtitle">Today's Hours: {{boleyHoursText}}</h4>
+        <p class="md3-card-text">Contact email: <a href='mailto:lawlib@lclark.edu'>lawlib&#64;lclark.edu</a></p>
+       <p class="md3-card-text">Contact phone: 503-768-6676</p>          
     </div>
   </div>
 </div>
