inching forward on nos

--- a/app/not-on-shelf/not-on-shelf.component.html
+++ b/app/not-on-shelf/not-on-shelf.component.html
@@ -1,1 +1,5 @@
-<p>not-on-shelf works! {{mainLocation}}</p>
+@if (this.nosShow == true) {
+   
+    <p>Not on shelf? <a href="{{url}}" target="_blank">Let us know.</a></p>
+}
+
