request bar formatted correctly

--- a/app/reserves-request/reserves-request.component.html
+++ b/app/reserves-request/reserves-request.component.html
@@ -1,20 +1,22 @@
 <!--<p>reserves-request works!</p>-->
 <!--  https://nikitahl.github.io/svg-2-code/ for converting svg to path-->
   @if (this.reservesRequestShow == true) {
+
+<!---
 <div   data-qa="ReservesRequest" aria-label="Reserves Request" class="ng-star-inserted">
    <mat-card _ngcontent-ng-c3616819823="" class="mat-mdc-card mdc-card request-card">
       <mat-card-content _ngcontent-ng-c3616819823="" class="mat-mdc-card-content column-for-requests-container">
          <div _ngcontent-ng-c3616819823="" class="left-section">
             <div _ngcontent-ng-c3616819823="" class="request-card-icon-title-subtitle">
-               <div _ngcontent-ng-c3616819823="" class="column-for-icon">
+               <span _ngcontent-ng-c3616819823="" class="column-for-icon">
                   <mat-icon _ngcontent-ng-c3616819823="" role="img" class="mat-icon notranslate nde-mat-icon-size-large mat-icon-no-color ng-star-inserted" aria-hidden="true" data-mat-icon-type="svg" data-mat-icon-name="ReservesRequest">
                     <svg xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px" fill="#000000"><path d="M362-413.33h203.33V-480H362v66.67Zm0-100h370V-580H362v66.67Zm0-100h370V-680H362v66.67Zm-82 400q-27 0-46.83-19.84Q213.33-253 213.33-280v-533.33q0-27 19.84-46.84Q253-880 280-880h533.33q27 0 46.84 19.83Q880-840.33 880-813.33V-280q0 27-19.83 46.83-19.84 19.84-46.84 19.84H280Zm0-66.67h533.33v-533.33H280V-280ZM146.67-80q-27 0-46.84-19.83Q80-119.67 80-146.67v-600h66.67v600h600V-80h-600ZM280-813.33V-280v-533.33Z"/></svg>                  </mat-icon>
                   
-               </div>
-               <div _ngcontent-ng-c3616819823="" class="request-card-title-subtitle">
+               </span>
+               <span _ngcontent-ng-c3616819823="" class="request-card-title-subtitle">
                   <div _ngcontent-ng-c3616819823="" class="request-title mat-body-large">Add to Course Reserves</div>
                   <div _ngcontent-ng-c3616819823="" class="request-description mat-body-medium">Request to place this item on reserve for your course.</div>
-               </div>
+               </span>
             </div>
          </div>
          <mat-card-actions _ngcontent-ng-c3616819823="" class="mat-mdc-card-actions mdc-card__actions column-for-buttons">
@@ -23,5 +25,30 @@
       </mat-card-content>
    </mat-card>
 </div>
+-->
+
+<div class="nde-action-card">
+  <div class="nde-card-icon">
+    <mat-icon>library_books</mat-icon>
+  </div>
+
+  <div class="nde-card-content">
+    <div class="nde-card-title">Add to Course Reserves</div>
+    <div class="nde-card-subtitle">
+      Request to place this item on reserve for your course.
+    </div>
+  </div>
+
+  <div class="nde-card-action">
+    <button mat-raised-button  (click)="openDialog()">
+      Place item on reserve
+    </button>
+  </div>
+</div>
+
+
+
+
+
   }
 
