--- a/app/reserves-request/reserves-request.component.scss
+++ b/app/reserves-request/reserves-request.component.scss
@@ -32,7 +32,7 @@
 
 /* Fix for buttons if theme is missing */
 button[mat-raised-button] {
-  background-color: #3f51b5; /* Default Material Indigo */
+  background-color: rgb(94, 94, 94); /* Default Material Indigo */
   color: white;
   padding: 0 16px;
   line-height: 36px;
@@ -40,6 +40,7 @@ button[mat-raised-button] {
   border: none;
   cursor: pointer;
 }
+
 @import url('https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css');
 
 #reservesRequestForm{
@@ -50,4 +51,64 @@ button[mat-raised-button] {
 }
 .form-group{
   margin-bottom: 15px;
+}
+
+
+
+
+:host {
+  display: block;
+}
+
+.nde-action-card {
+  margin-top:16px;
+  display: flex;
+  align-items: center;
+  gap: 16px;
+
+  padding: 20px 24px;
+  margin-bottom: 16px;
+
+  background-color: #f8f5f3; // Primo-like warm gray
+  border-radius: 16px;
+
+  box-shadow:
+    0 1px 2px rgba(0, 0, 0, 0.06),
+    0 2px 6px rgba(0, 0, 0, 0.04);
+}
+
+.nde-card-icon {
+  flex: 0 0 auto;
+  color: #5f6368;
+
+  mat-icon {
+    font-size: 32px;
+    width: 32px;
+    height: 32px;
+  }
+}
+
+.nde-card-content {
+  flex: 1 1 auto;
+  min-width: 0;
+}
+
+.nde-card-title {
+  font-size: 16px;;
+  font-weight: 400;
+  
+}
+
+.nde-card-subtitle {
+  font-size: 14px;
+  color: #555;
+}
+
+.nde-card-action {
+  flex: 0 0 auto;
+
+  button {
+    border-radius: 999px; // pill button like Primo
+    padding: 8px 24px;
+  }
 }
