--- a/app/reserves-request/reserves-request.component.scss
+++ b/app/reserves-request/reserves-request.component.scss
@@ -112,3 +112,10 @@ button[mat-raised-button] {
     padding: 8px 24px;
   }
 }
+
+.button-row {
+  display: flex;
+  justify-content: flex-end;
+  gap: 20px;
+  margin-top: 20px;
+}
